--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,4 +13,5 @@ evmap = "10.0"
 mime = "0.3"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+sqlparser = "0.16"
 uuid = { version = "1.0", features = ["v4"] }
