--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ actix-rt = "1.1"
 aws-sdk-athena = "0.10"
 dotenv = "0.15"
 evmap = "10.0"
+evmap-derive = "0.2"
 mime = "0.3"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
